# BimModelThree

./: .gitignore  README.md  package-lock.json  package.json
converter-service/: README.md  package-lock.json  package.json
converter-service/server/: api-server.js
converter-service/src/: analyze-frag.js  business-data-store.js  compare-existing-frags.js  conversion-report-writer.js  conversion-task-service.js  convert-ifc-to-fragments.js  manifest-writer.js
docs/: BIM Viewer第三方系统SDK对接说明.md  BIM Viewer系统优化方案.md  BIM-Three与Fragments架构功能扩展可行性评估.md  BIM模型Manifest与ViewerSDK规范.md  BIM模型系统MVP现状与开发记录.md  BIM模型系统功能验收清单.md  BIM模型系统架构与模块实施方案.md  BIM模型项目进度评估与进度计划表.md  README.md
docs/archive/: BIM-Three与Fragments-MVP说明.md  BIM-Three与Fragments架构功能扩展可行性评估.md  BIM三服务器系统架构方案.md  BIM双视窗版本对比规则.md  BIM模型Manifest与ViewerSDK实施计划.md  BIM模型Manifest与ViewerSDK设计文档.md  BIM模型Manifest需求文档.md  BIM模型P0验证执行记录.md  BIM模型功能实现开发计划.md  BIM模型文件后端存储与实现形式评估.md  BIM模型未实现功能开发计划.md  BIM模型第三方系统集成方案.md  BIM模型系统引擎接口规范.md  BIM模型系统架构引擎与模块设计.md  (+9 more)
ifc-to-glb-converter/: .gitignore  README.md  pyproject.toml  validate_glb.py
ifc-to-glb-converter/ifc_to_glb/: __init__.py  cli.py  converter.py  exporter.py  geometry.py  hierarchy.py  materials.py  properties.py
ifc-to-glb-converter/scripts/: convert.sh
ifc-to-glb-converter/tests/: test_converter.py  test_geometry.py  test_hierarchy.py  test_materials.py  test_properties.py
src/: convert-ifc-to-fragments.js  validate-t003-t004.js
viewer/: index.html  main.js  mobile-main.js  mobile.html  style.css
viewer-service/: README.md  package-lock.json  package.json
(+121 files in other folders)
